End-to-end sample working

--- a/brokerless-sample-application/src/main/resources/application.yaml
+++ b/brokerless-sample-application/src/main/resources/application.yaml
@@ -6,3 +6,17 @@ spring:
       enabled: true
 server:
   port: 9100
+logging:
+  level:
+    brokerless: trace
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+    enabled-by-default: true
+brokerless:
+  consumer:
+    producers:
+      - name: sample-application
+        base-url: http://127.0.0.1:9100
