--- a/brokerless-sample-application/pom.xml
+++ b/brokerless-sample-application/pom.xml
@@ -118,31 +118,38 @@
           <mainClass>brokerless.sampleapp.BrokerlessSampleApplication</mainClass>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>com.google.cloud.tools</groupId>
-        <artifactId>jib-maven-plugin</artifactId>
-        <version>${jib-maven-plugin.version}</version>
-        <configuration>
-          <from>
-<!--            <image>eclipse-temurin:21_35-jre</image>-->
-            <platforms>
-              <platform>
-                <architecture>arm64</architecture>
-                <os>linux</os>
-              </platform>
-            </platforms>
-          </from>
-          <to>
-            <image>brokerless-sample-application</image>
-            <tags>snapshot</tags>
-          </to>
-          <container>
-            <mainClass>brokerless.sampleapp.BrokerlessSampleApplication</mainClass>
-            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
-          </container>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>v2</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
+            <configuration>
+              <includes><include>src-v2/**</include></includes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>v3</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
+            <configuration>
+              <includes><include>src-v3/**</include></includes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
